[gd_scene load_steps=9 format=3 uid="uid://cxe4tbfbaqkfh"]

[ext_resource type="Texture2D" uid="uid://dgeqemjaggoob" path="res://sprites/spider1.png" id="1_bpoks"]
[ext_resource type="Script" path="res://scripts/spider.gd" id="1_v41bp"]
[ext_resource type="Texture2D" uid="uid://dpnv2g2slhx24" path="res://sprites/spider2.png" id="2_6lhas"]
[ext_resource type="AudioStream" uid="uid://dppyds6c4jrm3" path="res://sounds/Hit_eny.wav" id="4_q3r6n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_p4gxt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_bpoks")
}, {
"duration": 1.0,
"texture": ExtResource("2_6lhas")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_s0kyx"]
radius = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sc64b"]
size = Vector2(656, 604)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tljc5"]
size = Vector2(40, 34)

[node name="spider" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
safe_margin = 5.0
script = ExtResource("1_v41bp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_p4gxt")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -18)
shape = SubResource("CircleShape2D_s0kyx")

[node name="spiderArea2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="spiderArea2D"]
position = Vector2(-2, -18)
shape = SubResource("RectangleShape2D_sc64b")

[node name="spider_hit_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="spider_hit_Area"]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_tljc5")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_q3r6n")

[connection signal="area_entered" from="spiderArea2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="spider_hit_Area" to="." method="_on_spider_hit_area_area_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
